--- a/products-app/src/app/app.component.html
+++ b/products-app/src/app/app.component.html
@@ -1,13 +1,4 @@
-<section>
-  <h1>{{title}}</h1>
-  <app-header></app-header>
-  <header>
-    <nav>
-      <ul>
-        <li><a [routerLink]="['']" routerLinkActive="router-link-active">Home</a></li>
-        <li><a [routerLink]="['products']">Products</a></li>
-      </ul>
-    </nav>
-  </header>
+<section class="container text-center">  
+  <app-header></app-header>  
   <router-outlet></router-outlet>
 </section>
