--- a/products-app/src/app/product/product-list/product-list.component.html
+++ b/products-app/src/app/product/product-list/product-list.component.html
@@ -11,19 +11,24 @@
     <button (click)="showHide()">{{show_list?'hide':'show'}}</button>
 
     <ul *ngIf="show_list" class="list-group">
-        <li *ngFor="let a_product of filterProducts(filter_text)" class="list-group-item">   
+        <li *ngFor="let a_product of filterProducts(filter_text)" class="list-group-item">
             <div>{{a_product?.name | uppercase}}</div>
             <div>{{a_product?.code | lowercase}}</div>
             <div>
-                <img [src]="'./assets/imgs/'+a_product?.image" alt=""  [style.maxWidth.px]="img_width" [style.maxHeight.px]="img_height"/>
+                <img [src]="'./assets/imgs/'+a_product?.image" alt="" [style.maxWidth.px]="img_width"
+                    [style.maxHeight.px]="img_height" />
             </div>
             <div>{{a_product?.date | date: 'full'}}</div>
             <div>{{a_product?.price | currency:'EUR':true:'1.2-2'}}</div>
-            <div>{{a_product?.stars}}</div>
+            <div>{{a_product.stars}}
+                <rate-component [rating]="a_product.stars"
+                (star_clicked)="updateStars($event,a_product.code)">
+                </rate-component>
+            </div>
         </li>
     </ul>
 
-    
+
 
 
 </section>
