--- a/products-app/src/app/product/product-list/product-list.component.html
+++ b/products-app/src/app/product/product-list/product-list.component.html
@@ -11,7 +11,7 @@
     <button (click)="showHide()">{{show_list?'hide':'show'}}</button>
 
     <ul *ngIf="show_list" class="list-group">
-        <li *ngFor="let a_product of filterProducts(filter_text)" class="list-group-item">
+        <li *ngFor="let a_product of products | filterProducts:filter_text" class="list-group-item">
             <div>{{a_product?.name | uppercase}}</div>
             <div>{{a_product?.code | lowercase}}</div>
             <div>
