--- a/TasksProjectsApp/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/TasksProjectsApp/src/app/tasks/tasks-list/tasks-list.component.html
@@ -12,11 +12,17 @@
 		</tr>
 		<tr *ngFor="let aTask of tasks">
 			<td>{{aTask.tid}}</td>
-			<td>{{aTask.description}}</td>
+			<td>
+				<div *ngIf="!show_desc_form[aTask.tid]" (click)="showDescForm(aTask.tid)">
+					{{aTask.description}}
+				</div>
+				<name-editor *ngIf="show_desc_form[aTask.tid]" [description]="aTask.description" (save_clicked)="saveName($event,aTask.tid)">
+				</name-editor>
+			</td>
 			<td>{{aTask.time}}</td>
 			<td>{{aTask.project}}</td>
-			<td>				
-				<app-delete [tid]="aTask.tid" (delete_clicked)="deleteTask($event)" ></app-delete>
+			<td>
+				<app-delete [tid]="aTask.tid" (delete_clicked)="deleteTask($event)"></app-delete>
 			</td>
 		</tr>
 	</table>
