--- a/TasksProjectsApp/src/app/utils/delete/delete.component.html
+++ b/TasksProjectsApp/src/app/utils/delete/delete.component.html
@@ -1,1 +1,1 @@
-<button (click)="delete()">delete</button>
+<button type="button" class="btn btn-secondary mb-3" (click)="delete()"><i class="bi bi-trash3"></i></button>
