--- a/TasksProjectsApp/src/app/utils/name-editor/name-editor.component.html
+++ b/TasksProjectsApp/src/app/utils/name-editor/name-editor.component.html
@@ -1,4 +1,8 @@
-<article>
-    <input type="text" [(ngModel)]="description">
-    <button (click)="save()">Ok</button>
+<article class="row g-3">
+    <div class="col-auto">
+        <input type="text" [(ngModel)]="description" class="form-control">
+    </div>
+    <div class="col-auto">
+        <button type="button" class="btn btn-light" (click)="save()">Ok</button>
+    </div>
 </article>
