--- a/TasksProjectsApp/src/app/projects/projects-list/projects-list.component.html
+++ b/TasksProjectsApp/src/app/projects/projects-list/projects-list.component.html
@@ -7,8 +7,10 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">{{project.name}}</h5>
-                    <div>Id: {{project.pid}}</div>
-                    <div>Deadline: {{project.date | date: 'shortDate'}}</div>
+                    <div>
+                        <h6>Id:</h6> {{project.pid}}
+                    </div>
+                    <div><h6>Deadline:</h6> {{project.date | date: 'shortDate'}}</div>
                     <a href="#" class="card-link">12 tasks</a>
                 </div>
             </div>
