--- a/TasksProjectsApp/src/app/projects/projects-list/projects-list.component.html
+++ b/TasksProjectsApp/src/app/projects/projects-list/projects-list.component.html
@@ -3,7 +3,7 @@
     <input class="form-control" [(ngModel)]="filter_text" placeholder="text to filter projects">
     <br>
     <div class="row row-cols-1 row-cols-md-2 g-4">
-        <article *ngFor="let project of projects" class="col">
+        <article *ngFor="let project of projects | filterElements:'name':filter_text" class="col">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">{{project.name}}</h5>
