--- a/TasksProjectsApp/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/TasksProjectsApp/src/app/tasks/tasks-list/tasks-list.component.html
@@ -1,7 +1,8 @@
 <section>
 	<h2>Tasks</h2>
 	<br>
-
+    <input class="form-control" [(ngModel)]="filter_text" placeholder="text to filter tasks">
+	<hr>
 	<table class="table table-striped">
 		<thead class="table-dark">
 			<tr>
@@ -13,7 +14,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr *ngFor="let aTask of tasks">
+			<tr *ngFor="let aTask of tasks | filterElements:'description':filter_text">
 				<td>{{aTask.tid}}</td>
 				<td>
 					<div *ngIf="!show_desc_form[aTask.tid]" (click)="showDescForm(aTask.tid)">
