--- a/products-app/src/app/app.component.html
+++ b/products-app/src/app/app.component.html
@@ -1,12 +1,8 @@
 <section>
   <app-header></app-header>
-  <h1>{{title}}</h1>
-  <div>User Data {{getName()}}:</div>  
-  <ul>
-    <li>{{an_object.name}}</li>
-    <li>{{an_object.email}}</li>
-    <li>{{an_object.age}}</li>
-  </ul>
+  
+  <hr>
 
-  <product-list></product-list>
+  <router-  ></router-outlet>
+
 </section>
