--- a/products-app/src/app/structure/header/header.component.html
+++ b/products-app/src/app/structure/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<section>
+    <h1>{{title}}</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a [routerLink]="['dashboard']" routerLinkActive="router-link-active">Home</a></li>
+                <li><a [routerLink]="['products']" routerLinkActive="router-link-active">Products</a></li>
+            </ul>
+        </nav>
+    </header>
+    <router-outlet></router-outlet>
+</section>
