--- a/products-app/src/app/product/product-detail/product-detail.component.html
+++ b/products-app/src/app/product/product-detail/product-detail.component.html
@@ -1,1 +1,5 @@
-<p>product-detail works!</p>
+<h2>{{product?.code}}</h2>
+<pre>{{product | json}}</pre>
+
+<button (click)="goHome()">go Home</button>
+<button (click)="goProducts()">go Products</button>
