--- a/TasksProjectsApp/src/app/app.component.html
+++ b/TasksProjectsApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <header></header>
     <h1>{{title}}</h1>
-    <tasks-list></tasks-list>
-    <projects-list></projects-list>
+    
+    <router-outlet></router-outlet>
 </div>
