--- a/TasksProjectsApp/src/app/tasks/task-detail/task-detail.component.html
+++ b/TasksProjectsApp/src/app/tasks/task-detail/task-detail.component.html
@@ -1,1 +1,5 @@
-<p>task-detail works!</p>
+<h2>{{task?.description}}</h2>
+<pre>{{task|json}}</pre>
+
+<button (click)="goNext()">Next</button>
+<button (click)="goPrev()">Prev</button>
