--- a/products-app/src/app/users/new-user/new-user.component.html
+++ b/products-app/src/app/users/new-user/new-user.component.html
@@ -1,31 +1,31 @@
 <section>
     <h2>Signup form</h2>
-    <form novalidate >        
-        <fieldset>
+    <form novalidate [formGroup]="myform">
+        <fieldset formGroupName = "name">
             <div class="form-group">
                 <label>Name</label>
-                <input type="text" class="form-control" required>
+                <input formControlName="firstName" type="text" class="form-control" required>
             </div>
 
             <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" class="form-control" required>
+                <input formControlName="lastName" type="text" class="form-control" required>
             </div>
         </fieldset>
 
         <div class="form-group">
             <label>Email</label>
-            <input type="email" class="form-control" required>            
+            <input formControlName="email" type="email" class="form-control" required>
         </div>
 
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" required>
+            <input formControlName="password" type="password" class="form-control" required>
         </div>
 
         <div class="form-group">
             <label>Language</label>
-            <select class="form-control" >
+            <select class="form-control" formControlName="language">
                 <option value="" disabled selected>Please select a language</option>
                 <option value="es">es</option>
                 <option value="en">en</option>
