--- a/TasksProjectsApp/src/app/projects/projects-list/projects-list.component.html
+++ b/TasksProjectsApp/src/app/projects/projects-list/projects-list.component.html
@@ -10,8 +10,12 @@
                     <div>
                         <h6>Id:</h6> {{project.pid}}
                     </div>
-                    <div><h6>Deadline:</h6> {{project.date | date: 'shortDate'}}</div>
-                    <a href="#" class="card-link">12 tasks</a>
+                    <div>
+                        <h6>Deadline:</h6> {{project.date | date: 'shortDate'}}
+                    </div>
+                    <div>{{project_tasks[project.pid]||0}} tasks</div>
+                    <br>
+                    <a [routerLink]="['/projects',project.pid]" class="card-link"><i class="bi bi-eye"></i></a>
                 </div>
             </div>
         </article>
