--- a/TasksProjectsApp/src/app/projects/project-detail/project-detail.component.html
+++ b/TasksProjectsApp/src/app/projects/project-detail/project-detail.component.html
@@ -8,9 +8,9 @@
     </li>&nbsp;
     <li class="nav-item">
         <div class="btn-group">
-            <button class="btn btn-info" (click)="navigateToMembers()">Members A</button>
+            <button class="btn btn-info" (click)="navigateToMembers()">Members</button>
             <a class="btn btn-secondary" [routerLink]="['./members']" routerLinkActive="router-link-active"
-                [state]="project">Members B</a>
+                [state]="project">Members</a>
         </div>
     </li>
 </ul>
