--- a/TasksProjectsApp/src/app/projects/project-detail/project-detail.component.html
+++ b/TasksProjectsApp/src/app/projects/project-detail/project-detail.component.html
@@ -1,1 +1,20 @@
-<p>project-detail works!</p>
+<h2>{{project.name}}</h2>
+<hr>
+<pre>{{project | json}}</pre>
+<ul class="nav">
+    <li class="nav-item">
+        <a class="btn btn-secondary" [routerLink]="['./tasks']" routerLinkActive="router-link-active"
+            [state]="project">Tasks</a>
+    </li>&nbsp;
+    <li class="nav-item">
+        <div class="btn-group">
+            <button class="btn btn-info" (click)="navigateToMembers()">Members</button>
+            <a class="btn btn-secondary" [routerLink]="['./members']" routerLinkActive="router-link-active"
+                [state]="project">Members</a>
+        </div>
+    </li>
+</ul>
+<hr>
+<router-outlet></router-outlet>
+<hr>
+<button class="btn btn-primary" (click)="goBack()"><i class="bi bi-arrow-bar-left"></i></button>
