--- a/products-app/src/app/users/new-user/new-user.component.html
+++ b/products-app/src/app/users/new-user/new-user.component.html
@@ -1,7 +1,7 @@
 <section>
     <h2>Signup form</h2>
-    <form novalidate [formGroup]="myform">
-        <fieldset formGroupName = "name">
+    <form novalidate [formGroup]="myform" (ngSubmit)="onSubmit()">
+        <fieldset formGroupName="name">
             <div class="form-group">
                 <label>Name</label>
                 <input formControlName="firstName" type="text" class="form-control" required>
@@ -12,10 +12,16 @@
                 <input formControlName="lastName" type="text" class="form-control" required>
             </div>
         </fieldset>
+        <pre>{{myform.controls['name'].value|json}}</pre>
+        <pre>{{myform.controls['name'].valid}}</pre>
+
 
         <div class="form-group">
             <label>Email</label>
-            <input formControlName="email" type="email" class="form-control" required>
+            <input formControlName="email" type="email" class="form-control" required required>
+            <div class="form-control-feedback" *ngIf="email.invalid && email.dirty">
+                Invalid email
+            </div>
         </div>
 
         <div class="form-group">
@@ -31,10 +37,14 @@
                 <option value="en">en</option>
             </select>
         </div>
+        <pre>{{myform.get('language')?.value}}</pre>
+        <pre>{{myform.get('language')?.valid}}</pre>
 
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!myform.valid">Submit</button>
         </div>
+        <pre>{{myform.value|json}}</pre>
+        <pre>{{myform.valid}}</pre>
 
     </form>
 </section>
