--- a/products-app/src/app/structure/header/header.component.html
+++ b/products-app/src/app/structure/header/header.component.html
@@ -1,5 +1,6 @@
 <section>
     <h1>{{title}}</h1>
+    <h1 i18n="site title|The title for the app@@appTtitle">The title</h1>
     <header>
         <nav>
             <ul>
