--- a/TasksProjectsApp/src/app/structure/header/header.component.html
+++ b/TasksProjectsApp/src/app/structure/header/header.component.html
@@ -17,7 +17,7 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['projects']" routerLinkActive="router-link-active">Projects</a>
         </li>
-        <li class="nav-item" *appFeatureFlags="new-feature">
+        <li class="nav-item" *appFeatureFlags="'new-feature'">
           <a class="nav-link" [routerLink]="['new-feature']" routerLinkActive="router-link-active">New-feature</a>
         </li>
         <li class="nav-item">
