--- a/demo2-app/src/app/hola/hello/hello.component.html
+++ b/demo2-app/src/app/hola/hello/hello.component.html
@@ -18,4 +18,8 @@
             <div>{{user.nombre}}</div>
         </li>
     </ul>
+
+    <input type="text" [(ngModel)]="elInput" />
+    <p>{{elInput}}</p>
+
 </div>
