--- a/TasksProjectsApp/src/app/app.component.html
+++ b/TasksProjectsApp/src/app/app.component.html
@@ -1,5 +1,12 @@
-<h1>Tareas - Proyectos</h1>
+<div class="container">
+    
+    <h1>Tareas - Proyectos</h1>
 
-<task-list></task-list>
+    <hr>
 
-<project-list></project-list>
+    <task-list></task-list>
+
+    <hr>
+
+    <project-list></project-list>
+</div>
