--- a/demo2-app/src/app/hola/hello/hello.component.html
+++ b/demo2-app/src/app/hola/hello/hello.component.html
@@ -11,16 +11,16 @@
     <hr>
 
     <div highlight color="yellow" [user]="usuarios[0]">
-        xxx
+        XXXX
     </div>
     <hr>
 
     <h2>usuarios</h2>
 
-    <button (click)="mostrarLista()">{{texto_boton}}</button>
+    <button (click)="mostrarLista()" *replicate="4">{{texto_boton}}</button>
 
     <ul [class]="usuario_class" *ngIf="mostrar_lista">
-        <li *ngFor="let user of usuarios | filtraDatos:'l'" >
+        <li *ngFor="let user of usuarios | filtraDatos:'l'">
             <div>{{user.id}}</div>
             <div>{{user.nombre | uppercase}}</div>
             <div>
