--- a/demo2-app/src/app/app.component.html
+++ b/demo2-app/src/app/app.component.html
@@ -1,6 +1,7 @@
 <section class="hola container">
   <h1>Hola mundo!!</h1>
 
-  <hello></hello>
+  <!-- <hello></hello> -->
+  <router-outlet></router-outlet>
 
 </section>
