--- a/demo2-app/src/styles.less
+++ b/demo2-app/src/styles.less
@@ -3,11 +3,12 @@
 
 /* You can add global styles to this file, and also import other style files */
 body{
-    background: yellow;
+    background: #f6f6f6;
 
     button{
         background: blue;
-        padding: 24px;
+        padding: 8px 24px;
         font-weight: 900;
+        margin: 8px;
     }
 }
