--- a/demo2-app/src/app/app.component.html
+++ b/demo2-app/src/app/app.component.html
@@ -1,11 +1,10 @@
 <section class="hola container">
   <h1>Hola mundo!!</h1>
   <header>
-    <nav>
-      <ul>
-        <li><a [routerLink]="['hello']">Hello</a></li>
-        <li><a [routerLink]="['hello2']">Hello2</a></li>
-      </ul>
+    <nav class="nav nav-pills nav-justified">
+        <a class="flex-sm-fill text-sm-center nav-link active" [routerLink]="['hello']">Hello</a>
+        <a class="flex-sm-fill text-sm-center nav-link " [routerLink]="['hello2']">Hello2</a>
+        <a class="flex-sm-fill text-sm-center nav-link " [routerLink]="['products']">Productos</a>
     </nav>
   </header>
 
