--- a/TasksProjectsApp/src/app/app.component.html
+++ b/TasksProjectsApp/src/app/app.component.html
@@ -1,12 +1,4 @@
 <div class="container">
-    
-    <h1>Tareas - Proyectos</h1>
-
-    <hr>
-
-    <task-list></task-list>
-
-    <hr>
-
-    <project-list></project-list>
+    <header></header>
+    <router-outlet></router-outlet>
 </div>
