--- a/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
+++ b/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
@@ -1,8 +1,8 @@
 <h1>Tareas</h1>
 <div>
-    <input type="text" [(ngModel)]="texto_filtro" />
+    <input class="form-control" type="text" [(ngModel)]="texto_filtro" />
 </div>
-<table class="tareas">
+<table class="tareas table table-striped">
     <thead>
         <tr>
             <th>Id</th>
