--- a/demo2-app/src/app/app.component.html
+++ b/demo2-app/src/app/app.component.html
@@ -2,9 +2,9 @@
   <h1>Hola mundo!!</h1>
   <header>
     <nav class="nav nav-pills nav-justified">
-        <a class="flex-sm-fill text-sm-center nav-link active" [routerLink]="['hello']">Hello</a>
-        <a class="flex-sm-fill text-sm-center nav-link " [routerLink]="['hello2']">Hello2</a>
-        <a class="flex-sm-fill text-sm-center nav-link " [routerLink]="['products']">Productos</a>
+        <a class="flex-sm-fill text-sm-center nav-link" [routerLink]="['hello']" [routerLinkActive]="'active'">Hello</a>
+        <a class="flex-sm-fill text-sm-center nav-link " [routerLink]="['hello2']" [routerLinkActive]="'active'">Hello2</a>
+        <a class="flex-sm-fill text-sm-center nav-link " [routerLink]="['products']" [routerLinkActive]="'active'">Productos</a>
     </nav>
   </header>
 
