--- a/demo2-app/src/app/product/product-list/product-list.component.html
+++ b/demo2-app/src/app/product/product-list/product-list.component.html
@@ -19,7 +19,7 @@
                 </app-rate>
             </div>
 
-            <div><a [routerLink]="['/products',a_product.code]" >Ver detalle</a></div>
+            <div><a [routerLink]="['/products',a_product.code]" [queryParams]="{f:'valor'}">Ver detalle</a></div>
         </li>
     </ul>
 
