--- a/TasksProjectsApp/src/app/projects/project-list/project-list.component.html
+++ b/TasksProjectsApp/src/app/projects/project-list/project-list.component.html
@@ -11,6 +11,9 @@
             <span>
                 <app-rate [rate]="aP.rating" (start_clicked)="updateRating($event,aP.pid)"></app-rate>
             </span>
+            <span>{{project_tasks[aP.pid]||0}} tasks</span>
+            <br>
+            <span><a [routerLink]="['/projects',aP.pid]" class="card-link"><i class="bi bi-eye"></i></a></span>
         </div>
     </li>
 </ul>
