--- a/TasksProjectsApp/src/app/projects/new-project/new-project.component.html
+++ b/TasksProjectsApp/src/app/projects/new-project/new-project.component.html
@@ -1,19 +1,19 @@
 <section>
     <h2>New Project</h2>
-    <form >
+    <form novalidate [formGroup]="pform" (ngSubmit)="onSubmit()">
         <div class="form-group">
             <label>Name</label>
-            <input type="text"  class="form-control" required>
+            <input type="text" formControlName="name" class="form-control" required>
         </div>
 
         <div class="form-group">
             <label>Deadline</label>
-            <input type="date"  class="form-control" required>
+            <input type="date" formControlName="deadline" class="form-control" required>
         </div>
 
         <br>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button [disabled]="!pform.valid" type="submit" class="btn btn-primary">Submit</button>
         </div>
     </form>
 </section>
