--- a/demo2-app/src/app/users/new-user/new-user.component.html
+++ b/demo2-app/src/app/users/new-user/new-user.component.html
@@ -4,8 +4,7 @@
         <fieldset formGroupName="name">
             <div class="form-group">
                 <label>Name</label>
-                <input type="text" class="form-control" [formControl]="firstName" 
-                    placeholder="Introduce tu nombre">
+                <input type="text" class="form-control" [formControl]="firstName" placeholder="Introduce tu nombre">
 
                 <span class="error" *ngIf="firstName.touched && !firstName.valid">Valor no valido</span>
 
@@ -18,19 +17,19 @@
 
             <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" class="form-control"  formControlName="lastName">
+                <input type="text" class="form-control" formControlName="lastName">
             </div>
         </fieldset>
         <pre>{{myForm.controls['name'].value | json}}</pre>
 
         <div class="form-group">
             <label>Email</label>
-            <input type="email" class="form-control"  formControlName="email">
+            <input type="email" class="form-control" formControlName="email">
         </div>
 
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control"  formControlName="password">
+            <input type="password" class="form-control" formControlName="password">
         </div>
 
         <div class="form-group">
@@ -52,4 +51,42 @@
     <pre>valid:{{myForm.valid}}</pre>
     <pre>touched:{{myForm.touched}}</pre>
 
+</section>
+
+<hr>
+
+<section>
+    <h2>Signup form 2</h2>
+    <form>
+        <div class="form-group">
+            <input class="form-control" name="name" required placeholder="name">
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="surname" required placeholder="surname">
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="email" required appEmailvalidator placeholder="email" >
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="password" required placeholder="password" minlength="8">
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="language" required minlength="2" placeholder="language">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary" [disabled]="true">Submit</button>
+        </div>
+
+    </form>
+
+</section>
+
+<hr>
+
+<section>
+    <input type="search" class="form-control" placeholder="Please enter search term" [formControl]="searchField">
+    <hr />
+    <ul>
+        <li *ngFor="let search of searches">{{ search }}</li>
+    </ul>
 </section>
