--- a/demo2-app/src/app/users/new-user/new-user.component.html
+++ b/demo2-app/src/app/users/new-user/new-user.component.html
@@ -57,27 +57,31 @@
 
 <section>
     <h2>Signup form 2</h2>
-    <form>
+    <form #f="ngForm" (ngSubmit)="onSubmitTemplate()">
         <div class="form-group">
-            <input class="form-control" name="name" required placeholder="name">
+            <input class="form-control" name="name" required placeholder="name" [(ngModel)]="model.name">
         </div>
         <div class="form-group">
-            <input class="form-control" name="surname" required placeholder="surname">
+            <input class="form-control" name="surname" required placeholder="surname" [(ngModel)]="model.surname">
         </div>
         <div class="form-group">
-            <input class="form-control" name="email" required appEmailvalidator placeholder="email" >
+            <input class="form-control" name="email" required appEmailvalidator placeholder="email" [(ngModel)]="model.email">
         </div>
         <div class="form-group">
-            <input class="form-control" name="password" required placeholder="password" minlength="8">
+            <input class="form-control" name="password" required placeholder="password" minlength="8" [(ngModel)]="model.password">
         </div>
         <div class="form-group">
-            <input class="form-control" name="language" required minlength="2" placeholder="language">
+            <input class="form-control" name="language" required minlength="2" placeholder="language" [(ngModel)]="model.language">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary" [disabled]="true">Submit</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
         </div>
 
     </form>
+
+    <pre>model: {{model | json}}</pre>
+    <pre>f.value: {{f.value | json}}</pre>
+    <pre>f.valid: {{f.valid}}</pre>
 
 </section>
 
