--- a/TasksProjectsApp/src/app/projects/project-detail/project-detail.component.html
+++ b/TasksProjectsApp/src/app/projects/project-detail/project-detail.component.html
@@ -6,7 +6,12 @@
         <a class="btn btn-secondary" [routerLink]="['./tasks']" routerLinkActive="router-link-active"
             [state]="project">Tasks</a>
     </li>
-    
+    <li class="nav-item">
+        <div class="btn-group">
+            <button class="btn btn-info" (click)="navigateToMembers()">Members</button>            
+        </div>
+    </li>
+
 </ul>
 <hr>
 <router-outlet></router-outlet>
